# MonadStudio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  analyze_unemployment.py  build_error.md  build_log.txt  cat_build.py  cat_clean.py  check_paths.py  clean_and_verify.py  create_dummy_data.py  debug_engine.py  gui_main.py  listing.txt  model_config.json  pyproject.toml  read_log.py  run_cockpit.bat  sanity_check.py  setup.py  setup_cmake.py  setup_pybind.py  start.bat  test_binding.py  test_compile.cpp  test_compile_jac.cpp  test_model.json  test_multidim.cpp  verify_core_logic.py  verify_jacobians.py  verify_rank.py  verify_ssj.py  verify_stabilization_robust.py
Release/: monad_core.cp310-win_amd64.pyd
_legacy/: USAGE_PHASE1.md  build_wasm.bat  debug_wage.py  test_unemployment.py  verify_columns.py  verify_nk.py  verify_redist.py  verify_wage_stickiness.py
docs/: API.md  ARCHITECTURE.md  USAGE.md
examples/: api_demo.py  dsl_demo.py  facade_demo.py  generic_asad.py  generic_islm.py  generic_nk.py  hank_model.yaml  nk_model.yaml  verify_phase2.py  verify_ssj_matrices.py  verify_toy_hank.py
experiments/: 02_monetary_shock.py  03_forward_guidance.py  04_full_pipeline.py  05_open_economy.py  06_winners_and_losers.py  07_liquidity_trap.py  08_grand_synthesis.py
frontend/: package-lock.json  package.json
middleware/: ir_schema.py  model_builder.py
monad_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
orchestrator/: requirements.txt
presets/: japan_zlb.yaml  us_normal.yaml
scripts/: calibrate.py  download_eigen.py  generate_plots.py  (+1 more)
(+142 files in other folders)
